FEAT(api-server): Add route /version
At this time, VERSION is a constant hardcoded ...
