# docs/swagger.json
@@ -62,6 +62,26 @@
                     }
                 }
             }
+        },
+        "/version": {
+            "get": {
+                "description": "Version of API-server",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Version",
+                "responses": {
+                    "200": {
+                        "description": "version",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
